    resolvable. (Peng Zhang via harsh)
    
    MAPREDUCE-4785. TestMRApp occasionally fails (haibochen via rkanter)

    MAPREDUCE-5649. Reduce cannot use more than 2G memory for the final merge
    (Gera Shegalov via jlowe)

    MAPREDUCE-6549. multibyte delimiters with LineRecordReader cause
    duplicate records (wilfreds via rkanter)

    MAPREDUCE-5948. org.apache.hadoop.mapred.LineRecordReader does not handle
    multibyte record delimiters well (Vinayakumar B, Rushabh Shah, and Akira
    AJISAKA via jlowe)

    MAPREDUCE-6481. LineRecordReader may give incomplete record and wrong
    position/key information for uncompressed input sometimes. (Zhihai Xu via
    jlowe)

    MAPREDUCE-5982. Task attempts that fail from the ASSIGNED state can
    disappear (Chang Li via jlowe)

    MAPREDUCE-6492. AsyncDispatcher exit with NPE on
    TaskAttemptImpl#sendJHStartEventForAssignedFailTask (Bibin A Chundatt via
    jlowe)

    MAPREDUCE-6555. TestMRAppMaster fails on trunk. (Junping Du via ozawa)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-6284. Add Task Attempt State API to MapReduce Application
    Master REST API. (Ryu Kobayashi via ozawa)

    MAPREDUCE-6364. Add a "Kill" link to Task Attempts page. (Ryu Kobayashi
    via ozawa)

  IMPROVEMENTS

    MAPREDUCE-6595. Fix findbugs warnings in OutputCommitter and
    FileOutputCommitter. (Akira AJISAKA via junping_du)

    MAPREDUCE-6316. Task Attempt List entries should link to the task overview.
    (Siqi Li via gera)

  OPTIMIZATIONS

    MAPREDUCE-6376. Add avro binary support for jhist files (Ray Chiang via
    jlowe)

  BUG FIXES

    MAPREDUCE-6302. Preempt reducers after a configurable timeout irrespective
    of headroom. (kasha)

    MAPREDUCE-6635. Unsafe long to int conversion in UncompressedSplitLineReader
    and IndexOutOfBoundsException. (Junping Du via vvasudev)

    MAPREDUCE-6405. NullPointerException in App Attempts page.